--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "tsc && nodemon javascript/server.js",
+    "start": "tsc && node javascript/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
